@@ -83,13 +83,6 @@ Drivers audio:
 -probar menu ay piano, beeper piano. nota: beeper piano con notas largas, como la musica del Zorro
 
 -probar fallback de cinta standard a real tape, juegos: dracula tzx, Death Wish 3 (Erbe - Serie Leyenda).tzx  (DeathWish3(IBSA).tzx.zip), mortadelo y filemon II, Rambo. Parece que silent service si se mete como standard tape no detecta como cargador
--probar divmmc con zxuno y sin zxuno. tambien en instalado en /Applications en Mac y en /usr/ de Linux. Probar reload mmc
--probar esxdos handler
--probar divide. Probar reload ide
--probar zxpand: config "V", config "D=", CAT, CAT "+DIR", DELETE, load "NOMBRE", SAVE "NOMBRE" etc. En zx80, zx81
-config "O=X" donde X es 0, 1 o 2 y probar a sobreescribir archivos, dragons lair version lenta y rapida (optimizada). zxpand linea comandos --enable-zxpand y --zxpand-root-dir (y este probando con path completo, relativo, y con y sin / al final)
-Probar delete, rename, etc y resto de acciones con CMDR, con archivos en minusculas y mayusculas
--probar dandanator: spectrum y CPC
 
 -probar spectra. Test modos. Comparar con ZXSP. X128 NO es correcto del todo, falla la implementacion del flash
 Comparar test 128 pantalla con tabla docs/spectra/SPECTRA 128 Test.txt
@@ -101,10 +94,7 @@ Modo 2 con demos
 Modo 2 con timex+ulaplus demo slideshow_timex_64.tap, DemoHAM8, DemoHAM8x1.tzx
 Modo 6 512x192 real/simulado a 256x192 con timmy.tap y testtimexmode6.tap y testtimexmode6-ulaplus.tap y alternaterom_sebasic4_rom01.rom(mode 1)
 
--probar desactivando border, con y sin realvideo, en spectrum y zx8081
 -probar efectos border: btime, overscan, vectron, BorderTrix, Hercules, dark star (cuando te matan), aqua plane, paperboy, super wonder boy (pausa), thelosttapesofalbion0 (pausa), rotatrix, shock megademo, KnightsDemonsDX. en modos 128, 48k e inves.
--probar ula48.tap, ula128.tap, scroll2017. Deberian verse bien sin necesidad de cambiar early / late timings
--probar autoactivado de rainbow cuando efectos en border. juegos, demos y snap_tests/test_autorealvideo_border.zx
 -probar color border en ULAPlus
 
 -probar cpustats
@@ -113,7 +103,6 @@ Modo 6 512x192 real/simulado a 256x192 con timmy.tap y testtimexmode6.tap y test
 -probar desactivando visualmem
 -probar waveform, tambien en drivers no graficos como curses, aa, etc
 -probar ay player. Con versiones 00,01,02,3. Probar Spectrum y CPC
--probar a sobreescribir algun archivo y que pida confirmacion en menu
 -probar opcion desactivar contended memory en menu
 -probar fuller audio box emulation
 -probar advanced timing settings 
@@ -127,7 +116,6 @@ nota: cacalib, curses  en consola texto (no X) el mouse solo notifica al pulsar 
 -probar buscador vidas infinitas. tambien con cpu top speed
 -probar rzx files con extras/media/spectrum/rzx
 -probar --verbose 0 y que no aparezca ningun mensaje por consola...
--probar smartload. probar deteccion de tipo tzx (standard o turbo) en quickload
 -probar on screen keyboard, con F8 y con joystick
 -probar on screen adventure keyboard 
 -probar --limitopenmenu
@@ -147,8 +135,6 @@ nota: cacalib, curses  en consola texto (no X) el mouse solo notifica al pulsar 
 -probar modo gigascreen. demos e imagenes
 -probar modos ULA Plus: rgb estandard, modo 3 radastan, modos ZEsarUX. modos ham (cambio rapido de paleta por interrupciones) multicolor demo, etc. hardware scroll radastan+zxuno
 -probar emulator speed
--probar mantransferv3
--probar multiface, transtape, etc... todos los dispositivos de copia
 
 -keymaps en xwindows y sdl para z88, cpc, chloe, sam, ql, ...
 
@@ -160,5 +146,4 @@ nota: cacalib, curses  en consola texto (no X) el mouse solo notifica al pulsar 
 -probar generando archivo binario y probar a ejecutar, e instalar. 
 -probar generando archivo source y probar a compilar e instalar cambiando prefix
 -probar versiones finales: binario->bajar y ejecutar, instalar. source->bajar, compilar y ejecutar, instalar.
-
 
